[package]
name = "code-errors"
version = "0.1.0"
edition = "2021"
authors = ["Prabhav Khera <prabhavkhera@hotmail.com>"]
description = "Command line tool to find errors in code!"
homepage = "https://github.com/probro27/error-suggestion-tool"
repository = "https://github.com/probro27/error-suggestion-tool"
license = "MIT"
keywords = ["command-line", "suggestions", "code-analysis"]
categories = ["command-line-utilities"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checked_command = "0.2.4"
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
http = "0.2.8"
json = "0.12.4"
serde = { version= "1.0.152", features=["derive"] }
